fix: add top to fix logo position on mobile

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -88,6 +88,7 @@
 .mobile .logo {
   position: fixed;
   left: 50%;
+  top: 35px;
   transform: translateX(-31%);
   margin-left: -30px;
   grid-area: logo;
